# chess

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
board/: board.cpp  board.h
include/: move.h  movement_const.h  piece_type.h  pieces.h  profiler.h
include/board/: board.h  transposition.h
include/generator/: generator.h
include/piece/: king.h  pawn.h  rook.h
include/search/: search.h  zobrist.h
move/: move.h
piece/: piece.h
src/: main.cpp
src/board/: board.cpp  board.h
src/chess_piece/: bishop.cpp  knight.cpp  pawn.cpp  queen.cpp
src/dispatch/: piece_dispatch.cpp  piece_dispatch.h  piece_dispath.cpp
src/generator/: generate.cpp  generator.cpp  generator.h
src/piece/: chess_piece.h  king.h  knight.h  pawn.h  rook.h
src/search/: search.cpp  search.h  zobrist.cpp
tests/: test_base.h  test_bishop.cpp  test_board.cpp  test_king.cpp  test_knight.cpp  test_pawn.cpp  test_queen.cpp  test_rook.cpp  test_search.cpp  test_transposition.cpp  test_zobrist.cpp
